styles/globals.css
/* ... */
.search-clear-collapsed:hover {
  transform: scale(1.25);
}

/*  */

.global-search-navNarrow {
  line-height: 33px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  text-decoration: none;
  width: min-content;
  height: 50px;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.search-container-navNarrow {
  position: relative;
  top: 0;
  right: 0;
  width: 35px;
  height: 35px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: transparent;
  transition: width 0.3s ease-in-out;
}

.search-container-navNarrow.open {
  width: 35vw;
  background-color: var(--extra4);
  border-radius: 40px;
  /* margin-left: 1em; */
}

.search-icon {
  cursor: pointer;
}

.search-navNarrow {
  display: hidden;
  width: 0;
  background: transparent;
  border: none;
  color: var(--primary);
  border-radius: 5px;
  font-size: 16px;
  color: #333;
  outline: none;
  height: 100%;
  /* border-bottom:1px solid var(--native1); */
}

.search-container-navNarrow.open .search-navNarrow {
  display: block;
  color: var(--primary);
  width: 80%;
  padding: 5px;
  padding-left: 30px;
}

.search-container-navNarrow.open .search-icon {
  color: var(--navbar-links);
}

.search-container-navNarrow .search-icon {
  color: var(--navbar-links);
  font-size: 20px;
  position: absolute;
  left: 0.5rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  transform: translateY(-50%);
}

.search-container-navNarrow .search-clear-navNarrow {
  right: 10px;
  display: none;
  position: absolute;
  align-self: center;
  font-size: 16px;
  color: var(--primary);
  transition: transform 0.2s;
  cursor: pointer;
}

.search-container-navNarrow.open .search-clear-navNarrow {
  display: block;
}

.search-clear-navNarrow:hover {
  transform: scale(1.25);
}

.search-result-count {
  margin: 0px 0px 20px 0px;
  text-align: start;
  padding-left: auto;
  font-family: "open-sans";
  color: var(--primary);
  font-size: xx-large;
  padding-inline: 5%;
}

.result-container {
  animation-name: search-result;
  animation-duration: 0.3s;
  animation-timing-function: ease;
}

@keyframes search-result {
  0% {
    scale: 0.75;
  }

  100% {
    scale: 1;
  }
}

.global-search-navNarrow .global-search-collapsed i {
  font-size: 50px;
}

.search-clear-navNarrow-collapsed {
  /* align-self: center; */
  font-size: 20px;
  background-color: var(--extra4) !important;
  margin-top: 5px !important;
  transition: transform 0.2s !important;
  cursor: pointer !important;
  color: var(--primary) !important;
  position: absolute !important;
  right: 190px !important;
  scale: 0.85 !important;
  width: auto !important;
  padding-inline: 15px !important;
  border-radius: 10px !important;
}

.search-clear-navNarrow-collapsed:hover {
  transform: scale(1.25);
}

/*  */
/* Global Search Ends*/

/* Pagination layout starts */
.paginationBttns {
  margin-top: 50px;
  list-style-type: none;
  display: flex;
  justify-content: center;
  align-items: center;
  color: var(--primary);
}

@media only screen and (max-width: 767px) {
  .paginationBttns {
    flex-wrap: wrap;
    align-content: flex-start;
  }
}

.paginationBttns a {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 0px;
  height: 0px;
  padding: 20px;
  margin: 10px;
  font-size: 20px;
  font-family: "open-sans";
  border: 1px solid transparent;
  border-radius: 50%;
  cursor: pointer;
  transition: ease 300ms all;
}

.paginationBttns li {
  font-size: 16px;
  font-weight: 100;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: "open-sans";
}

.paginationBttns a:hover {
  background: var(--primary);
  color: var(--native1);
}

.paginationActive a {
  color: var(--native1);
  background: var(--primary);
}

.disabledLinkClassName {
  opacity: 1;
  pointer-events: none;
}

.disabledLinkClassName:hover {
  cursor: default;
}

/* Pagination layout ends */

.footer-copyright {
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 20px;
  background-color: #00253a;
  margin: 0px;
  width: 100%;
  height: 10vh;
}
.label:hover {
  background-color: #0093ed;
  color: white;
}

